--- a/src/languages/zh.json
+++ b/src/languages/zh.json
@@ -70,6 +70,7 @@
     "cargoLocatedAt": "货船位于 {location}。",
     "cargoNotCurrentlyOnMap": "货船当前不在地图上。",
     "cargoShipDetectedSetting": "检测到货船时发送通知。",
+    "cargoShipDockingAtHarbor": "货船刚刚停靠在港口，位置是 {location}",
     "cargoShipEgressSetting": "货船进入出口阶段时发送通知。",
     "cargoShipEntersEgressStage": "货船应在 {location} 进入出口阶段。",
     "cargoShipEntersMap": "货船从 {location} 进入地图。",
@@ -725,6 +726,12 @@
     "trackerRemovePlayerDesc": "从 {tracker} 移除玩家",
     "trademarkShownBeforeMessage": "每条游戏内消息前将显示 {trademark}。",
     "trainYard": "火车站",
+    "travelingVendorDetectedSetting": "当发现旅行商贩时，发送通知。",
+    "travelingVendorLeftSetting": "当旅行商贩离开地图时，发送通知。",
+    "travelingVendorLocatedAt": "旅行商贩位于 {location}。",
+    "travelingVendorLeftMap": "旅行商贩刚刚离开了地图，位置是 {location}。",
+    "travelingVendorNotCurrentlyOnMap": "旅行商贩目前不在地图上。",
+    "travelingVendorSpawnedAt": "旅行商贩出现在 {location}。",
     "turnOffCap": "关闭",
     "turnOnCap": "开启",
     "turningGroupOnOff": "将组 {group} 转换为 {status}。",
