--- a/src/languages/zh.json
+++ b/src/languages/zh.json
@@ -69,13 +69,15 @@
     "cargoLeavingMapAt": "货船将在 {location} 离开地图。",
     "cargoLocatedAt": "货船位于 {location}。",
     "cargoNotCurrentlyOnMap": "货船当前不在地图上。",
-    "cargoShipDetectedSetting": "检测到货船时发送通知。",
+    "cargoShipDetectedSetting": "当发现货船时，发送通知。",
     "cargoShipDockingAtHarbor": "货船刚刚停靠在港口，位置是 {location}",
-    "cargoShipEgressSetting": "货船进入出口阶段时发送通知。",
-    "cargoShipEntersEgressStage": "货船应在 {location} 进入出口阶段。",
+    "cargoShipDockingAtHarborSetting": "当货船停靠在港口时，发送通知。",
+    "cargoShipEgressSetting": "当货船进入退出阶段时，发送通知。",
+    "cargoShipEntersEgressStage": "货船应该位于退出阶段，位置是 {location}。",
     "cargoShipEntersMap": "货船从 {location} 进入地图。",
-    "cargoShipLeftMap": "货船刚刚在 {location} 离开地图。",
-    "cargoShipLeftSetting": "货船离开地图时发送通知。",
+    "cargoShipLeftHarbor": "货船刚刚离开了港口，位置是 {location}",
+    "cargoShipLeftMap": "货船刚刚离开了地图，位置是 {location}。",
+    "cargoShipLeftSetting": "当货船离开地图时，发送通知。",
     "cargoShipLocated": "货船位于 {location}。",
     "cargoship": "货船",
     "ceilingLight": "天花板灯",
