add missing "commandSyntaxTravelingVendor" to zh.json

--- a/src/languages/zh.json
+++ b/src/languages/zh.json
@@ -160,6 +160,7 @@
     "commandSyntaxTimers": "计时器",
     "commandSyntaxTranslateFromTo": "翻译从...到...",
     "commandSyntaxTranslateTo": "翻译至",
+    "commandSyntaxTravelingVendor": "供应商",
     "commandSyntaxTwig": "枝条",
     "commandSyntaxUnmute": "取消静音",
     "commandSyntaxUnsubscribe": "取消订阅",
